# non-spatial-input

./: Cargo.toml  README.md  flake.nix
azimuth/: Cargo.toml  README.md
azimuth/src/: handlers.rs  main.rs
display/: Cargo.toml
display/src/: main.rs
eclipse/: Cargo.toml
eclipse/src/: lib.rs  main.rs
ipc/: Cargo.toml
ipc/src/: lib.rs
manifold/: Cargo.toml  README.md
manifold/src/: input_window.rs  main.rs  wayland.rs
simular/: Cargo.toml  README.md
simular/src/: handlers.rs  main.rs
spatializer/: Cargo.toml
spatializer/src/: lib.rs
