[workspace]
resolver = "2"
members = ["azimuth", "display", "eclipse", "ipc", "manifold", "simular"]

[workspace.dependencies]
serde = { version = "1.0.163", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "tokio-macros",
    "time",
    "sync",
] }

[workspace.dependencies.stardust-xr-fusion]
features = ["keymap"]
git = "https://github.com/StardustXR/core.git"
branch = "dev"
# rev = "6ea2a27d"

[workspace.dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"
# rev = "0b763dab"
