[workspace]
resolver = "2"
members = ["azimuth", "display", "eclipse", "ipc", "manifold", "simular"]

[workspace.dependencies]
serde = { version = "1.0.163", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "tokio-macros",
    "time",
    "sync",
] }

[workspace.dependencies.stardust-xr-fusion]
features = ["keymap"]
git = "https://github.com/StardustXR/core.git"
branch = "dev"

[workspace.dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
branch = "dev"

[patch.crates-io]
stardust-xr-schemas = { git = "https://github.com/StardustXR/core.git", branch = "dev" }
