[package]
name = "azimuth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
color-rs = "0.8.0"
glam = "0.24.0"
input-event-codes = "5.16.8"
mint = "0.5.9"
serde = { version = "1.0.163", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = ["rt-multi-thread", "tokio-macros", "sync"] }
ipc = { path = "../ipc" }
console-subscriber = "0.2.0"
rustc-hash = "1.1.0"
parking_lot = "0.12.1"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.10.4"
tracing = "0.1.40"

[dependencies.stardust-xr-fusion]
features = ["keymap"]
git = "https://github.com/StardustXR/core.git"
# path = "../../core/fusion"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
# path = "../../molecules"
