[package]
name = "azimuth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
glam = "0.30.0"
input-event-codes = "5.16.8"
ipc = { path = "../ipc" }
spatializer = { path = "../spatializer" }
console-subscriber = "0.2.0"
rustc-hash = "1.1.0"
parking_lot = "0.12.1"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.10.4"
tracing = "0.1.40"
tokio = { workspace = true }
serde = { workspace = true }
stardust-xr-fusion = { workspace = true }
stardust-xr-molecules = { workspace = true }
