[package]
name = "ipc"
version = "0.1.0"
edition = "2021"

[dependencies]
flexbuffers = "2.0.0"
mint = { version = "0.5.9", features = ["serde"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
tokio = { version = "1.32.0", default-features = false, features = [
    "io-std",
    "io-util",
    "rt",
] }
