[package]
name = "stardust-xr-manifold"
version = "0.2.0"
edition = "2021"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Take input from your 2D desktop and shove it into 3D!"
license = "MIT"
repository = "https://github.com/StardustXR/manifold/"
homepage = "https://stardustxr.org"

[[bin]]
name = "manifold"
path = "src/main.rs"

[dependencies]
xkbcommon = { version = "0.7.0", features = ["x11", "wayland"] }
softbuffer = "0.4.1"
winit = "0.29.15"
input-event-codes = "5.16.8"
mint = { version = "0.5.9" }
stardust-xr-schemas = "1.5.1"
ctrlc = "3.4.1"
map-range = "0.1.2"
glam = "0.25.0"

eclipse = { path = "../eclipse" }
ipc = { path = "../ipc" }
