[package]
name = "manifold"
version = "0.50.0"
edition = "2021"
authors = ["Nova King <technobaboo@proton.me>"]
description = "Take input from your 2D desktop and shove it into 3D!"
license = "MIT"
repository = "https://github.com/StardustXR/manifold/"
homepage = "https://stardustxr.org"

[[bin]]
name = "manifold"
path = "src/main.rs"

[dependencies]
xkbcommon = { version = "0.7.0", features = ["x11", "wayland"] }
softbuffer = "0.4.2"
winit = "0.29.15"
input-event-codes = "5.16.8"
mint = { version = "0.5.9" }
stardust-xr-schemas = { workspace = true }
ctrlc = "3.4.4"
map-range = "0.1.2"
glam = { version = "0.27.0", features = ["mint"] }
ipc = { path = "../ipc" }
as-raw-xcb-connection = "1.0.1"
wayland-client = "0.31.2"
wayland-sys = "0.31.1"
libc = "0.2.153"
