[package]
name = "simular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
glam = "0.24.0"
mint = "0.5.9"
serde = { version = "1.0.163", features = ["serde_derive"] }
tokio = { version = "1.32.0", features = ["rt", "tokio-macros", "sync"] }
ipc = { path = "../ipc" }
console-subscriber = "0.2.0"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"

[dependencies.stardust-xr-fusion]
features = ["keymap"]
git = "https://github.com/StardustXR/core.git"
# path = "../../core/fusion"

[dependencies.stardust-xr-molecules]
git = "https://github.com/StardustXR/molecules.git"
# path = "../../molecules"
