[package]
name = "simular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
glam = "0.25.0"
mint = "0.5.9"
ipc = { path = "../ipc" }
console-subscriber = "0.2.0"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"

tokio = { workspace = true }
serde = { workspace = true }
stardust-xr-fusion = { workspace = true }
stardust-xr-molecules = { workspace = true }
