[package]
name = "simular"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
tracy = ["dep:tracing-tracy", "dep:tracy-client"]

[dependencies]
color-eyre = "0.6.2"
glam = "0.27.0"
mint = "0.5.9"
ipc = { path = "../ipc" }
console-subscriber = "0.2.0"
parking_lot = "0.12.1"
rustc-hash = "1.1.0"
input-event-codes = "5.16.8"

tokio = { workspace = true }
serde = { workspace = true, features = ["derive"] }
stardust-xr-fusion = { workspace = true }
stardust-xr-molecules = { workspace = true }
zbus = { version = "5.3.1", features = ["tokio"] }

tracing-tracy = { version = "0.11.4", optional = true }
tracy-client = { version = "0.18.0", optional = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
